--- a/bot.yml
+++ b/bot.yml
@@ -1,3 +1,7 @@
-name: Waldorf
-description: A lovable heckler and Statler's best friend. Install them both in \#random, and hilarity will ensue.
+name: Waldorfbot
+description:
+   A lovable heckler and Statlerbot's best friend. Install them both in \#random, and watch hilarity ensue.
+
+   Statlerbot and Waldorfbot will hang out in a channel, and will randomly respond (with about a 1% probability)
+   to any given message left by a human in that channel.
 avatar: waldorf.png
